spacing between and header fixed

--- a/ui.frontend/src/main/webpack/components/content/core-header/v1/header/style.scss
+++ b/ui.frontend/src/main/webpack/components/content/core-header/v1/header/style.scss
@@ -62,6 +62,7 @@
       border: none;
       box-shadow: $box-shadow;
       margin-top: 0.125rem !important;
+      transform: translate3d(0.5px, 38px, 0px) !important;
     }
     .dropdown-toggle, .menu-content {
       padding: 0.5rem 0.5rem;
@@ -227,6 +228,11 @@
   }
   .offcanvas-body {  
     .sl-mega-menu{
+      .dropdown{
+        .dropdown-menu{
+          margin-top: 0.5px !important;
+        }
+      }
       @include media-breakpoint-down(lg) {
       .dropdown-menu{
         position: static !important;
